paper | comments CC

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -183,3 +183,120 @@
   year         = {1996},
 }
 
+@Article{Curtarolo2013,
+author={Curtarolo, Stefano
+and Hart, Gus L. W.
+and Nardelli, Marco Buongiorno
+and Mingo, Natalio
+and Sanvito, Stefano
+and Levy, Ohad},
+title={The high-throughput highway to computational materials design},
+journal={Nature Materials},
+year={2013},
+volume={12},
+number={3},
+pages={191-201},
+issn={1476-4660},
+doi={10.1038/nmat3568},
+url={https://doi.org/10.1038/nmat3568}
+}
+
+@article{Parlinski1997,
+author = {Parlinski, K. and Li, Z. and Kawazoe, Y.},
+doi = {10.1103/PhysRevLett.78.4063},
+journal = {Phys. Rev. Lett.},
+number = {21},
+pages = {4063--4066},
+title = {{First-Principles Determination of the Soft Mode in Cubic ZrO2}},
+volume = {78},
+year = {1997}
+}
+
+@article{Carbogno2016,
+author = {Carbogno, Christian and Ramprasad, Rampi and Scheffler, Matthias},
+doi = {10.1103/PhysRevLett.118.175901},
+issn = {0031-9007},
+journal = {Phys. Rev. Lett.},
+number = {175901},
+pages = {1--5},
+title = {{Ab initio Green-Kubo Approach for the Thermal Conductivity of Solids}},
+volume = {118},
+year = {2017}
+}
+
+@Article{Wilkinson2016,
+author={Wilkinson, Mark D.
+and Dumontier, Michel
+and Aalbersberg, IJsbrand Jan
+and Appleton, Gabrielle
+and Axton, Myles
+and Baak, Arie
+and Blomberg, Niklas
+and Boiten, Jan-Willem
+and da Silva Santos, Luiz Bonino
+and Bourne, Philip E.
+and Bouwman, Jildau
+and Brookes, Anthony J.
+and Clark, Tim
+and Crosas, Merc?{\textasciidieresis}
+and Dillo, Ingrid
+and Dumon, Olivier
+and Edmunds, Scott
+and Evelo, Chris T.
+and Finkers, Richard
+and Gonzalez-Beltran, Alejandra
+and Gray, Alasdair J. G.
+and Groth, Paul
+and Goble, Carole
+and Grethe, Jeffrey S.
+and Heringa, Jaap
+and {\^a}??t Hoen, Peter A. C.
+and Hooft, Rob
+and Kuhn, Tobias
+and Kok, Ruben
+and Kok, Joost
+and Lusher, Scott J.
+and Martone, Maryann E.
+and Mons, Albert
+and Packer, Abel L.
+and Persson, Bengt
+and Rocca-Serra, Philippe
+and Roos, Marco
+and van Schaik, Rene
+and Sansone, Susanna-Assunta
+and Schultes, Erik
+and Sengstag, Thierry
+and Slater, Ted
+and Strawn, George
+and Swertz, Morris A.
+and Thompson, Mark
+and van der Lei, Johan
+and van Mulligen, Erik
+and Velterop, Jan
+and Waagmeester, Andra
+and Wittenburg, Peter
+and Wolstencroft, Katherine
+and Zhao, Jun
+and Mons, Barend},
+title={The FAIR Guiding Principles for scientific data management and stewardship},
+journal={Scientific Data},
+year={2016},
+volume={3},
+number={1},
+pages={160018},
+abstract={There is an urgent need to improve the infrastructure supporting the reuse of scholarly data. A diverse set of stakeholders{\^a}??representing academia, industry, funding agencies, and scholarly publishers{\^a}??have come together to design and jointly endorse a concise and measureable set of principles that we refer to as the FAIR Data Principles. The intent is that these may act as a guideline for those wishing to enhance the reusability of their data holdings. Distinct from peer initiatives that focus on the human scholar, the FAIR Principles put specific emphasis on enhancing the ability of machines to automatically find and use the data, in addition to supporting its reuse by individuals. This Comment is the first formal publication of the FAIR Principles, and includes the rationale behind them, and some exemplar implementations in the community.},
+issn={2052-4463},
+doi={10.1038/sdata.2016.18},
+url={https://doi.org/10.1038/sdata.2016.18}
+}
+
+@article{Eriksson2019,
+author = {Eriksson, Fredrik and Fransson, Erik and Erhart, Paul},
+doi = {10.1002/adts.201800184},
+journal = {Adv. Theor. Simul.},
+number = {5},
+pages = {1800184},
+title = {{The Hiphive Package for the Extraction of High‐Order Force Constants by Machine Learning}},
+volume = {2},
+year = {2019}
+}
