--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -300,3 +300,104 @@ title = {{The Hiphive Package for the Extraction of High‐Order Force Constants
 volume = {2},
 year = {2019}
 }
+
+@article{Tian2019,
+abstract = {Modern first-principles calculations predict that the thermal conductivity of boron arsenide is second only to that of diamond, the best thermal conductor, which may be of benefit for waste heat management in electronic devices. With the optimization of single-crystal growth methods, large-size and high-quality boron arsenide single crystals have been grown and thermal conductivity measurements have verified the related predictions. Benefiting from the increased size and improved qualities, additional properties have been characterized. Important factors related to boron arsenide, remaining challenges, and the future outlook are addressed in this minireview.},
+author = {Tian, Fei and Ren, Zhifeng},
+doi = {10.1002/anie.201812112},
+issn = {15213773},
+journal = {Angewandte Chemie - International Edition},
+keywords = {III–V compounds,boron arsenide,crystal growth,semiconductors,thermal conductivity},
+month = {apr},
+number = {18},
+pages = {5824--5831},
+pmid = {30523650},
+publisher = {Wiley-VCH Verlag},
+title = {{High Thermal Conductivity in Boron Arsenide: From Prediction to Reality}},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/anie.201812112},
+volume = {58},
+year = {2019}
+}
+
+@article{Juneja2019,
+abstract = {Low thermal conductivity materials are crucial for applications such as thermoelectric conversion of waste heat to useful energy and thermal barrier coatings. On the other hand, high thermal conductivity materials are necessary for cooling electronic devices. However, search for such materials via explicit evaluation of thermal conductivity either experimentally or computationally is very challenging. Here, we carried out high-throughput ab initio calculations, on a dataset containing 195 binary, ternary, and quaternary compounds. The lattice thermal conductivity $\kappa$l values of 120 dynamically stable and nonmetallic compounds are calculated, which span over 3 orders of magnitude. Among these, 11 ultrahigh and 15 ultralow $\kappa$l materials are identified. An analysis of generated property map of this dataset reveals a strong dependence of $\kappa$l on simple descriptors, namely, maximum phonon frequency, integrated Gr{\"{u}}neisen parameter up to 3 THz, average atomic mass, and volume of the unit cell. Using these descriptors, a Gaussian process regression-based machine learning (ML) model is developed. The model predicts log-scaled $\kappa$l with a very small root mean square error of ∼0.21. Comparatively, the Slack model, which uses more involved parameters, severely overestimates $\kappa$l. The superior performance of our ML model can ensure a reliable and accelerated search for multitude of low and high thermal conductivity materials.},
+author = {Juneja, Rinkle and Yumnam, George and Satsangi, Swanti and Singh, Abhishek K},
+doi = {10.1021/acs.chemmater.9b01046},
+file = {:home/purcell/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Juneja et al. - 2019 - Coupling the High-Throughput Property Map to Machine Learning for Predicting Lattice Thermal Conductivity(2).pdf:pdf},
+issn = {15205002},
+journal = {Chemistry of Materials},
+number = {14},
+pages = {5145--5151},
+title = {{Coupling the High-Throughput Property Map to Machine Learning for Predicting Lattice Thermal Conductivity}},
+url = {https://pubs.acs.org/sharingguidelines},
+volume = {31},
+year = {2019}
+}
+
+@article{Miller2017b,
+abstract = {High-throughput, low-cost, and accurate predictions of thermal properties of new materials would be beneficial in fields ranging from thermal barrier coatings and thermoelectrics to integrated circuits. To date, computational efforts for predicting lattice thermal conductivity ($\kappa$L) have been hampered by the complexity associated with computing multiple phonon interactions. In this work, we develop and validate a semiempirical model for $\kappa$L by fitting density functional theory calculations to experimental data. Experimental values for $\kappa$L come from new measurements on SrIn2O4, Ba2SnO4, Cu2ZnSiTe4, MoTe2, Ba3In2O6, Cu3TaTe4, SnO, and InI as well as 55 compounds from across the published literature. To capture the anharmonicity in phonon interactions, we incorporate a structural parameter that allows the model to predict $\kappa$L within a factor of 1.5 of the experimental value across 4 orders of magnitude in $\kappa$L values and over a diverse chemical and structural phase space, with accuracy similar to or better than that of computationally more expensive models.},
+author = {Miller, Samuel A and Gorai, Prashun and Ortiz, Brenden R and Goyal, Anuj and Gao, Duanfeng and Barnett, Scott A and Mason, Thomas O and Snyder, G. Jeffrey and Lv, Qin and Stevanovi{\'{c}}, Vladan and Toberer, Eric S},
+doi = {10.1021/acs.chemmater.6b04179},
+file = {:home/purcell/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Miller et al. - 2017 - Capturing Anharmonicity in a Lattice Thermal Conductivity Model for High-Throughput Predictions(4).pdf:pdf},
+issn = {15205002},
+journal = {Chemistry of Materials},
+number = {6},
+pages = {2494--2501},
+title = {{Capturing Anharmonicity in a Lattice Thermal Conductivity Model for High-Throughput Predictions}},
+url = {https://pubs.acs.org/sharingguidelines},
+volume = {29},
+year = {2017}
+}
+
+@article{Salzillo2016,
+abstract = {Raman microscopy in the lattice phonon region coupled with X-ray diffraction have been used to study the polymorphism in crystals and microcrystals of the organic semiconductor 9,10-diphenylanthracene (DPA) obtained by various methods. While solution grown specimens all display the well-known monoclinic structure widely reported in the literature, by varying the growth conditions two more polymorphs have been obtained, either from the melt or by sublimation. By injecting water as a nonsolvent in a DPA solution, one of the two new polymorphs was predominantly obtained in the shape of microribbons. Lattice energy calculations allow us to assess the relative thermodynamic stability of the polymorphs and verify that the energies of the different phases are very sensitive to the details of the molecular geometry adopted in the solid state. The mobility channels of DPA polymorphs are shortly investigated.},
+author = {Salzillo, Tommaso and {Della Valle}, Raffaele Guido and Venuti, Elisabetta and Brillante, Aldo and Siegrist, Theo and Masino, Matteo and Mezzadri, Francesco and Girlando, Alberto},
+doi = {10.1021/acs.jpcc.5b11115},
+file = {:home/purcell/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Salzillo et al. - 2016 - Two New Polymorphs of the Organic Semiconductor 9,10-Diphenylanthracene Raman and X-ray Analysis.pdf:pdf},
+issn = {19327455},
+journal = {Journal of Physical Chemistry C},
+number = {3},
+pages = {1831--1840},
+publisher = {UTC},
+title = {{Two new polymorphs of the organic semiconductor 9,10-diphenylanthracene: Raman and X-ray analysis}},
+url = {https://pubs.acs.org/sharingguidelines},
+volume = {120},
+year = {2016}
+}
+
+@article{Snyder2008,
+abstract = {Thermoelectric materials, which can generate electricity from waste heat or be used as solid-state Peltier coolers, could play an important role in a global sustainable energy solution. Such a development is contingent on identifying materials with higher thermoelectric efficiency than available at present, which is a challenge owing to the conflicting combination of material traits that are required. Nevertheless, because of modern synthesis and characterization techniques, particularly for nanoscale materials, a new era of complex thermoelectric materials is approaching. We review recent advances in the field, highlighting the strategies used to improve the thermopower and reduce the thermal conductivity.},
+author = {Snyder, G. Jeffrey and Toberer, Eric S.},
+doi = {10.1038/nmat2090},
+issn = {14761122},
+journal = {Nature Materials},
+keywords = {Biomaterials,Condensed Matter Physics,Materials Science,Nanotechnology,Optical and Electronic Materials,general},
+month = {feb},
+number = {2},
+pages = {105--114},
+pmid = {18219332},
+publisher = {Nature Publishing Group},
+title = {{Complex thermoelectric materials}},
+url = {www.nature.com/naturematerials},
+volume = {7},
+year = {2008}
+}
+
+@article{Chen2019c,
+abstract = {The lattice thermal conductivity ($\kappa$L) is a critical property of thermoelectrics, thermal barrier coating materials and semiconductors. While accurate empirical measurements of $\kappa$L are extremely challenging, it is usually approximated through computational approaches, such as semi-empirical models, Green-Kubo formalism coupled with molecular dynamics simulations, and first-principles based methods. However, these theoretical methods are not only limited in terms of their accuracy, but sometimes become computationally intractable owing to their cost. Thus, in this work, we build a machine learning (ML)-based model to accurately and instantly predict $\kappa$L of inorganic materials, using a benchmark data set of experimentally measured $\kappa$L of about 100 inorganic materials. We use advanced and universal feature engineering techniques along with the Gaussian process regression algorithm, and compare the performance of our ML model with past theoretical works. The trained ML model is not only helpful for rational design and screening of novel materials, but we also identify key features governing the thermal transport behavior in non-metals.},
+archivePrefix = {arXiv},
+arxivId = {1906.06378},
+author = {Chen, L. and Tran, Huan and Batra, R. and Kim, C. and Ramprasad, R.},
+doi = {10.1016/j.commatsci.2019.109155},
+eprint = {1906.06378},
+file = {:home/purcell/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Chen et al. - 2019 - Machine learning models for the lattice thermal conductivity prediction of inorganic materials(3).pdf:pdf},
+issn = {09270256},
+journal = {Computational Materials Science},
+keywords = {Inorganic materials,Lattice thermal conductivity,Machine learning Models},
+month = {dec},
+pages = {109155},
+publisher = {Elsevier B.V.},
+title = {{Machine learning models for the lattice thermal conductivity prediction of inorganic materials}},
+volume = {170},
+year = {2019}
+}
