--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -401,3 +401,15 @@ title = {{Machine learning models for the lattice thermal conductivity predictio
 volume = {170},
 year = {2019}
 }
+
+@article{West2006,
+author = {West, D. and Estreicher, S. K.},
+doi = {10.1103/PhysRevLett.96.115504},
+journal = {Phys. Rev. Lett.},
+number = {11},
+pages = {22--25},
+pmid = {16605840},
+title = {{First-principles calculations of vibrational lifetimes and decay channels: Hydrogen-related modes in Si}},
+volume = {96},
+year = {2006}
+}
