CC: paper again final

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -375,3 +375,15 @@ title = {{First-principles calculations of vibrational lifetimes and decay chann
 volume = {96},
 year = {2006}
 }
+
+@article{Turney2009,
+author = {Turney, JE and Landry, ES and McGaughey, AJH and Amon, CH},
+title = {{Predicting phonon properties and thermal conductivity from anharmonic lattice dynamics calculations and molecular dynamics simulations}},
+journal = {Phys. Rev. B},
+year = {2009},
+volume = {79},
+number = {6},
+pages = {64301}
+}
+
+
