paper | comments MS

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -224,72 +224,6 @@ volume = {118},
 year = {2017}
 }
 
-@Article{Wilkinson2016,
-author={Wilkinson, Mark D.
-and Dumontier, Michel
-and Aalbersberg, IJsbrand Jan
-and Appleton, Gabrielle
-and Axton, Myles
-and Baak, Arie
-and Blomberg, Niklas
-and Boiten, Jan-Willem
-and da Silva Santos, Luiz Bonino
-and Bourne, Philip E.
-and Bouwman, Jildau
-and Brookes, Anthony J.
-and Clark, Tim
-and Crosas, Merc?{\textasciidieresis}
-and Dillo, Ingrid
-and Dumon, Olivier
-and Edmunds, Scott
-and Evelo, Chris T.
-and Finkers, Richard
-and Gonzalez-Beltran, Alejandra
-and Gray, Alasdair J. G.
-and Groth, Paul
-and Goble, Carole
-and Grethe, Jeffrey S.
-and Heringa, Jaap
-and {\^a}??t Hoen, Peter A. C.
-and Hooft, Rob
-and Kuhn, Tobias
-and Kok, Ruben
-and Kok, Joost
-and Lusher, Scott J.
-and Martone, Maryann E.
-and Mons, Albert
-and Packer, Abel L.
-and Persson, Bengt
-and Rocca-Serra, Philippe
-and Roos, Marco
-and van Schaik, Rene
-and Sansone, Susanna-Assunta
-and Schultes, Erik
-and Sengstag, Thierry
-and Slater, Ted
-and Strawn, George
-and Swertz, Morris A.
-and Thompson, Mark
-and van der Lei, Johan
-and van Mulligen, Erik
-and Velterop, Jan
-and Waagmeester, Andra
-and Wittenburg, Peter
-and Wolstencroft, Katherine
-and Zhao, Jun
-and Mons, Barend},
-title={The FAIR Guiding Principles for scientific data management and stewardship},
-journal={Scientific Data},
-year={2016},
-volume={3},
-number={1},
-pages={160018},
-abstract={There is an urgent need to improve the infrastructure supporting the reuse of scholarly data. A diverse set of stakeholders{\^a}??representing academia, industry, funding agencies, and scholarly publishers{\^a}??have come together to design and jointly endorse a concise and measureable set of principles that we refer to as the FAIR Data Principles. The intent is that these may act as a guideline for those wishing to enhance the reusability of their data holdings. Distinct from peer initiatives that focus on the human scholar, the FAIR Principles put specific emphasis on enhancing the ability of machines to automatically find and use the data, in addition to supporting its reuse by individuals. This Comment is the first formal publication of the FAIR Principles, and includes the rationale behind them, and some exemplar implementations in the community.},
-issn={2052-4463},
-doi={10.1038/sdata.2016.18},
-url={https://doi.org/10.1038/sdata.2016.18}
-}
-
 @article{Eriksson2019,
 author = {Eriksson, Fredrik and Fransson, Erik and Erhart, Paul},
 doi = {10.1002/adts.201800184},
@@ -386,4 +320,52 @@ number = {6},
 pages = {64301}
 }
 
+@article{Gonze2020,
+    Author = "Gonze, Xavier and Amadon, Bernard and Antonius, Gabriel and Arnardi, Frédéric and Baguet, Lucas and Beuken, Jean-Michel and Bieder, Jordan and Bottin, François and Bouchet, Johann and Bousquet, Eric and Brouwer, Nils and Bruneval, Fabien and Brunin, Guillaume and Cavignac, Théo and Charraud, Jean-Baptiste and Chen, Wei and Côté, Michel and Cottenier, Stefaan and Denier, Jules and Geneste, Grégory and Ghosez, Philippe and Giantomassi, Matteo and Gillet, Yannick and Gingras, Olivier and Hamann, Donald R. and Hautier, Geoffroy and He, Xu and Helbig, Nicole and Holzwarth, Natalie and Jia, Yongchao and Jollet, François and Lafargue-Dit-Hauret, William and Lejaeghere, Kurt and Marques, Miguel A. L. and Martin, Alexandre and Martins, Cyril and Miranda, Henrique P. C. and Naccarato, Francesco and Persson, Kristin and Petretto, Guido and Planes, Valentin and Pouillon, Yann and Prokhorenko, Sergei and Ricci, Fabio and Rignanese, Gian-Marco and Romero, Aldo H. and Schmitt, Michael Marcus and Torrent, Marc and van Setten, Michiel J. and Troeye, Benoit Van and Verstraete, Matthieu J. and Zérah, Gilles and Zwanziger, Josef W.",
+    Journal = "Comput. Phys. Commun.",
+    Pages = "107042",
+    Title = "The Abinit project: Impact, environment and recent developments",
+    Volume = "248",
+    Year = "2020",
+    url = "https://doi.org/10.1016/j.cpc.2019.107042"
+}
 
+@article{Draxl2018,
+  doi = {10.1557/mrs.2018.208},
+  url = {https://doi.org/10.1557/mrs.2018.208},
+  year = {2018},
+  month = sep,
+  publisher = {Cambridge University Press ({CUP})},
+  volume = {43},
+  number = {9},
+  pages = {676--682},
+  author = {Claudia Draxl and Matthias Scheffler},
+  title = {{NOMAD}: The {FAIR} concept for big data-driven materials science},
+  journal = {{MRS} Bulletin}
+}
+
+@article{Behler2007,
+  doi = {10.1103/physrevlett.98.146401},
+  url = {https://doi.org/10.1103/physrevlett.98.146401},
+  year = {2007},
+  month = apr,
+  publisher = {American Physical Society ({APS})},
+  volume = {98},
+  number = {14},
+  author = {J\"{o}rg Behler and Michele Parrinello},
+  title = {Generalized Neural-Network Representation of High-Dimensional Potential-Energy Surfaces},
+  journal = {Physical Review Letters}
+}
+
+@article{Zhou2014,
+  doi = {10.1103/physrevlett.113.185501},
+  url = {https://doi.org/10.1103/physrevlett.113.185501},
+  year = {2014},
+  month = oct,
+  publisher = {American Physical Society ({APS})},
+  volume = {113},
+  number = {18},
+  author = {Fei Zhou and Weston Nielson and Yi Xia and Vidvuds Ozoli{\c{n}}{\v{s}}},
+  title = {Lattice Anharmonicity and Thermal Conductivity from Compressive Sensing of First-Principles Calculations},
+  journal = {Physical Review Letters}
+}
