FK | rearrange and remove duplicates

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -369,3 +369,17 @@ pages = {64301}
   title = {Lattice Anharmonicity and Thermal Conductivity from Compressive Sensing of First-Principles Calculations},
   journal = {Physical Review Letters}
 }
+
+@article{Schtt2018,
+  doi = {10.1063/1.5019779},
+  url = {https://doi.org/10.1063/1.5019779},
+  year = {2018},
+  month = jun,
+  publisher = {{AIP} Publishing},
+  volume = {148},
+  number = {24},
+  pages = {241722},
+  author = {K. T. Sch\"{u}tt and H. E. Sauceda and P.-J. Kindermans and A. Tkatchenko and K.-R. M\"{u}ller},
+  title = {{SchNet} {\textendash} A deep learning architecture for molecules and materials},
+  journal = {The Journal of Chemical Physics}
+}
