paper | add AiiDA and spglib reference

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -70,18 +70,6 @@
   year         = {2009},
 }
 
-@article{Fultz2010,
-  author       = {Fultz, Brent},
-  doi          = {10.1016/j.pmatsci.2009.05.002},
-  journaltitle = {Prog. Mater. Sci.},
-  number       = {4},
-  pages        = {247--352},
-  pmid         = {274562500001},
-  title        = {{Vibrational thermodynamics of materials}},
-  volume       = {55},
-  year         = {2010},
-}
-
 @article{Kapil2019,
   author       = {Venkat Kapil and Mariana Rossi and Ondrej Marsalek and Riccardo Petraglia and Yair Litman and Thomas Spura and Bingqing Cheng and Alice Cuzzocrea and Robert H. Meißner and David M. Wilkins and Benjamin A. Helfrecht and Przemysław Juda and Sébastien P. Bienvenue and Wei Fang and Jan Kessler and Igor Poltavsky and Steven Vandenbrande and Jelle Wieme and Clemence Corminboeuf and Thomas D. Kühne and David E. Manolopoulos and Thomas E. Markland and Jeremy O. Richardson and Alexandre Tkatchenko and Gareth A. Tribello and Veronique Van Speybroeck and Michele Ceriotti},
   doi          = {https://doi.org/10.1016/j.cpc.2018.09.020},
@@ -139,14 +127,6 @@
   publisher = {Cambridge University Press},
   title     = {Introduction to lattice dynamics},
   year      = {1993},
-}
-
-@report{Plimpton1993,
-  author      = {Plimpton, Steve},
-  institution = {Sandia National Labs., Albuquerque, NM (United States)},
-  title       = {Fast parallel algorithms for short-range molecular dynamics},
-  type        = {techreport},
-  year        = {1993},
 }
 
 @article{Jain2015,
@@ -344,42 +324,9 @@ pages = {64301}
   journal = {{MRS} Bulletin}
 }
 
-@article{Behler2007,
-  doi = {10.1103/physrevlett.98.146401},
-  url = {https://doi.org/10.1103/physrevlett.98.146401},
-  year = {2007},
-  month = apr,
-  publisher = {American Physical Society ({APS})},
-  volume = {98},
-  number = {14},
-  author = {J\"{o}rg Behler and Michele Parrinello},
-  title = {Generalized Neural-Network Representation of High-Dimensional Potential-Energy Surfaces},
-  journal = {Physical Review Letters}
-}
-
-@article{Zhou2014,
-  doi = {10.1103/physrevlett.113.185501},
-  url = {https://doi.org/10.1103/physrevlett.113.185501},
-  year = {2014},
-  month = oct,
-  publisher = {American Physical Society ({APS})},
-  volume = {113},
-  number = {18},
-  author = {Fei Zhou and Weston Nielson and Yi Xia and Vidvuds Ozoli{\c{n}}{\v{s}}},
-  title = {Lattice Anharmonicity and Thermal Conductivity from Compressive Sensing of First-Principles Calculations},
-  journal = {Physical Review Letters}
-}
-
-@article{Schtt2018,
-  doi = {10.1063/1.5019779},
-  url = {https://doi.org/10.1063/1.5019779},
-  year = {2018},
-  month = jun,
-  publisher = {{AIP} Publishing},
-  volume = {148},
-  number = {24},
-  pages = {241722},
-  author = {K. T. Sch\"{u}tt and H. E. Sauceda and P.-J. Kindermans and A. Tkatchenko and K.-R. M\"{u}ller},
-  title = {{SchNet} {\textendash} A deep learning architecture for molecules and materials},
-  journal = {The Journal of Chemical Physics}
+@misc{AiiDA,
+Author = {Sebastiaan. P. Huber and Spyros Zoupanos and Martin Uhrin and Leopold Talirz and Leonid Kahle and Rico Häuselmann and Dominik Gresch and Tiziano Müller and Aliaksandr V. Yakutovich and Casper W. Andersen and Francisco F. Ramirez and Carl S. Adorf and Fernando Gargiulo and Snehal Kumbhar and Elsa Passaro and Conrad Johnston and Andrius Merkys and Andrea Cepellotti and Nicolas Mounet and Nicola Marzari and Boris Kozinsky and Giovanni Pizzi},
+Title = {AiiDA 1.0, a scalable computational infrastructure for automated reproducible workflows and data provenance},
+Year = {2020},
+Eprint = {arXiv:2003.12476},
 }
