paper | fix DOIs

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -72,7 +72,7 @@
 
 @article{Kapil2019,
   author       = {Venkat Kapil and Mariana Rossi and Ondrej Marsalek and Riccardo Petraglia and Yair Litman and Thomas Spura and Bingqing Cheng and Alice Cuzzocrea and Robert H. Meißner and David M. Wilkins and Benjamin A. Helfrecht and Przemysław Juda and Sébastien P. Bienvenue and Wei Fang and Jan Kessler and Igor Poltavsky and Steven Vandenbrande and Jelle Wieme and Clemence Corminboeuf and Thomas D. Kühne and David E. Manolopoulos and Thomas E. Markland and Jeremy O. Richardson and Alexandre Tkatchenko and Gareth A. Tribello and Veronique Van Speybroeck and Michele Ceriotti},
-  doi          = {https://doi.org/10.1016/j.cpc.2018.09.020},
+  doi          = {10.1016/j.cpc.2018.09.020},
   issn         = {0010-4655},
   journaltitle = {Computer Physics Communications},
   pages        = {214 - 223},
@@ -275,7 +275,8 @@ journal = {J. Eur. Ceram. Soc.},
 year = {2008},
 volume = {28},
 number = {7},
-pages = {1405--1419}
+pages = {1405--1419},
+doi = {10.1016/j.jeurceramsoc.2007.12.023}
 }
 
 @article{West2006,
@@ -297,7 +298,9 @@ journal = {Phys. Rev. B},
 year = {2009},
 volume = {79},
 number = {6},
-pages = {64301}
+pages = {64301},
+doi = {10.1103/physrevb.79.064301}
+
 }
 
 @article{Gonze2020,
