--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,15 +11,18 @@
 }
 
 @article{Knoop2020,
-  author       = {Knoop, Florian and Purcell, Thomas A.R. and Scheffler, Matthias and Carbogno, Christian},
-  eid          = {arXiv:2006.14672},
-  eprint       = {2006.14672},
-  eprintclass  = {cond-mat},
-  eprinttype   = {arXiv},
-  journaltitle = {arXiv e-prints},
-  pages        = {arXiv:2006.14672},
-  title        = {Anharmonicity Measure for Materials},
-  year         = {2020},
+    title = {Anharmonicity measure for materials},
+    author = {Knoop, Florian and Purcell, Thomas A. R. and Scheffler, Matthias and Carbogno, Christian},
+    journal = {Phys. Rev. Materials},
+    volume = {4},
+    issue = {8},
+    pages = {083809},
+    numpages = {12},
+    year = {2020},
+    month = {Aug},
+    publisher = {American Physical Society},
+    doi = {10.1103/PhysRevMaterials.4.083809},
+    url = {https://link.aps.org/doi/10.1103/PhysRevMaterials.4.083809}
 }
 
 @article{Larsen2017,
