paper | correct DOI for AiiDA citation
- ignore zip files by .gitignore

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -335,4 +335,6 @@ Author = {Sebastiaan. P. Huber and Spyros Zoupanos and Martin Uhrin and Leopold 
 Title = {AiiDA 1.0, a scalable computational infrastructure for automated reproducible workflows and data provenance},
 Year = {2020},
 Eprint = {arXiv:2003.12476},
+doi = {10.1038/s41597-020-00638-4},
 }
+
