paper | add dois

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -153,6 +153,7 @@
   title        = {QUANTUM ESPRESSO: a modular and open-source software project for quantum simulations of materials},
   volume       = {21},
   year         = {2009},
+  doi          = {10.1088/0953-8984/21/39/395502},
 }
 
 @article{Kresse1996,
@@ -164,6 +165,8 @@
   title        = {Efficient iterative schemes for ab initio total-energy calculations using a plane-wave basis set},
   volume       = {54},
   year         = {1996},
+  doi          = {10.1103/PhysRevB.54.11169},
+
 }
 
 @Article{Curtarolo2013,
