--- a/tests/aims/md/md.in.nosocket.2
+++ b/tests/aims/md/md.in.nosocket.2
@@ -3,7 +3,7 @@ geometry = geometry.in
 
 [calculator]
 name     = aims
-socketio = true
+socketio = false
 
 [calculator.parameters]
 xc       = pw-lda
@@ -15,5 +15,5 @@ default  = minimal
 [md]
 driver:                        Verlet
 timestep:                      1
-maxsteps:                      1
+maxsteps:                      3
 compute_stresses:              2
